--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,6 +28,7 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <release>15</release>
                     <parameters>true</parameters>
                 </configuration>
             </plugin>
